# HemodynamicsDiscovery

./: LICENSE  README.md  classification_of_hemodynamics.ipynb  dataset.ipynb  model_discovery_AA_patients.ipynb  model_discovery_AVM_patients.ipynb  model_parameters.csv  pyproject.toml  utils.py
data/: README.md
data/AA/: G2.xlsx  K1.xlsx  K3.xlsx  R1.xlsx  S2.xlsx
data/AVM/: G1.xlsx  K2.xlsx  L1.xlsx  S1.xlsx  S3.xlsx
